# a2d2_ros_preparer

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.rst
.github/workflows/: CI.yml
a2d2_ros_preparer/: CMakeLists.txt  package.xml
a2d2_ros_preparer/config/: default.yaml  ingolstadt.yaml  preview.yaml
a2d2_ros_preparer/launch/: convert.launch  visualize.launch
a2d2_ros_preparer/rviz/: a2d2_playback_view.rviz
a2d2_ros_preparer/src/: converter.cpp  converter.h  converter_main.cpp  options.cpp  options.h  options_parser.cpp  options_parser.h
a2d2_ros_preparer/src/camera/: camera_configuration.cpp  camera_configuration.h  camera_image_stream.cpp  camera_image_stream.h  camera_image_timeseries_per_view.cpp  camera_image_timeseries_per_view.h
a2d2_ros_preparer/src/common/: timing.cpp  timing.h  types.h  utility.cpp  utility.h  value_timeseries.h  vector_conversion.cpp  vector_conversion.h
a2d2_ros_preparer/src/lidar/: lidar_scan_stream.cpp  lidar_scan_stream.h  lidar_scan_timeseries_per_view.cpp  lidar_scan_timeseries_per_view.h  npz_file_reader.cpp  npz_file_reader.h  timed_point_cloud_data.cpp  timed_point_cloud_data.h
a2d2_ros_preparer/src/vehicle/: bus_signal_stream.cpp  bus_signal_stream.h  vehicle.cpp  vehicle.h  vehicle_configuration.cpp  vehicle_configuration.h
a2d2_ros_preparer/urdf/: audi_a2d2.urdf
cmake/modules/: FindSphinx.cmake
docs/: CMakeLists.txt
docs/assets/: sensor_timing.drawio
docs/source/: a2d2.rst  conf.py  dataset_preparation.rst  faqs.rst  getting_started.rst  index.rst  usage.rst
